--- a/typedAdventure/index.html
+++ b/typedAdventure/index.html
@@ -33,7 +33,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,109,1) 4%, rgba
 	</head>
 	<body>
 	  <div align="center">
-		<button class="btn" onclick="location.href = '/play.html'">go in a typed adventure!</button>
-		<button class="btn" onclick="location.href = '/create.html'">create a typed adventure!</button></div>
+		<button class="btn" onclick="location.href = '/typedAdventure/play.html'">go in a typed adventure!</button>
+		<button class="btn" onclick="location.href = '/typedAdventure/create.html'">create a typed adventure!</button></div>
 	</body>
 </html>
