--- a/typedAdventure/play.html
+++ b/typedAdventure/play.html
@@ -49,7 +49,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,109,1) 4%, rgba
 		}
 		}
 		m=JSON.parse(decodeURIComponent(prompt("type in xml")))
-		playingId=0//{"0":{"title":"hi","buttons":[{"text":"this one","id":1},{"text":"other one","id":2}}}</script>
+		playingId=0
+		window.onload=actualize//{"0":{"title":"hi","buttons":[{"text":"this one","id":1},{"text":"other one","id":2}}}</script>
 	</head>
 	<body>
 		<div id="pannel"><p id="titles"></p><div id="buttonPannel"></div></div>
